# pantheon-sitehealth-emails

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  COPYRIGHT.txt  README.md  aws-config  composer.json  dns_classify.py  email_template.html  email_template.txt  inline-styles.php  monthly-report.txt  pantheon-sitehealth-emails  pantheon-sitehealth-emails.py  pyproject.toml  ruff-broad.toml  run-tests  sample-pantheon-sitehealth-emails.toml  script_context.py
.claude/: settings.json  settings.local.json
.claude/agents/: psh-implementer.md  psh-reviewer.md
.claude/hooks/: ruff-check.sh
.devcontainer/: DISABLED_init-firewall.sh  Dockerfile  container-start.sh  devcontainer.json  init-firewall.sh
.devcontainer/ssh/: config
.devcontainer/terminus/: config.yml
check/addon_updates/: __init__.py  table.py
check/cloudflare/: __init__.py  cache.py  cfg.py  egress.py  headers.py  httpseam.py  notices.py  pages.py
check/dns/: __init__.py  hook.py  notices.py
check/drupal/: __init__.py  d7_eol.py  multisite.py  papc.py
check/pantheon/: __init__.py  frozen.py  live_env.py  php_eol.py  updates.py
check/pantheon_cdn_change/: __init__.py  chain.py  detect.py  hook.py  model.py  notices.py  pantheon.py
check/umich/: __init__.py  annual_billing.py  cloudflare_cms.py  drupal_ua.py  hummingbird.py  oidc_login.py  sitelens.py
check/wordpress/: __init__.py  favicon.py  ocp.py  papc.py  sessions.py
development/: README.md  finalize-session.py
development/2026-07-03-archive-session/: analytics.md  context-pasted.txt  statistics.md  transcript-exported.txt  transcript.md  usage-pasted.txt
development/2026-07-04-test-harness/: HANDOFF.md  PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md  usage-pasted.txt
development/2026-07-04-test-suite/: PROBLEMS-DISCOVERED.md  PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript-exported.txt  transcript.md  usage-pasted.txt
development/2026-07-05-fix-existing-problems/: PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript-exported.txt  transcript.md  usage-pasted.txt
development/2026-07-06-env-plugin/: PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript-exported.txt  transcript.md  usage-pasted.txt
development/2026-07-07-cloudflare-fqdns/: PROMPT.md  SPEC.md  analytics.md  get_proxied_fqdns  statistics.md  transcript-exported.txt  transcript.md
development/2026-07-08-cloudflare-cache-configuration/: PROMPT.md  SPEC.md  cache-rules.html  drupal-module.html  managing-caching.html  transcript-exported.txt  usage-pasted.txt  wordpress-plugin.html
development/2026-07-09-resume-from-all/: PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md  usage-pasted.txt
development/2026-07-10-modular-dns-checks/: PLAN.md  PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-11-cachecheck-must-revalidate/: PLAN.md  PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-11-create-implementation-standards/: PROMPT.md
development/2026-07-12-pantheon-cdn-change-check/: PLAN.md  PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-13-db-connection-resilience/: PLAN.md  PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-16-workflow-improvement/: PROMPT.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-17-mod-I0-bootstrap/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-17-mod-I1-bug-fixes/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-17-mod-I2-gateway/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-17-mod-I3-config-notice/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-17-modularization-campaign/: BLOCKMAP.md  CAMPAIGN.md  LEDGER.md  PROMPT.md  analytics.md  statistics.md  transcript.md
development/2026-07-20-mod-I4-hooks-dag/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-20-mod-I5-db/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-20-mod-I6-traffic/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-20-mod-I7-plans/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-21-mod-I8-check-pantheon/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-21-mod-I9-wordpress/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-22-mod-I10-drupal/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-23-mod-I11-charts/: PLAN.md  SPEC.md  analytics.md  chart-hashes-before.txt  charts-scratch-measured.py  statistics.md  transcript.md
development/2026-07-23-mod-I12-render-mail/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
development/2026-07-23-mod-I13-lifecycle/: PLAN.md  SPEC.md  analytics.md  statistics.md  transcript.md
docs/: aws-credentials.md  awscli-login.md  cloudflare-cachecheck.md  cloudflare-fqdns.md  email-configuration.md  env-and-smtp-configuration.md  pantheon-cdn-change.md  resuming-interrupted-runs.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
plugin/aws/: __init__.py  get_secret.py
plugin/cloudflare/: __init__.py  client.py  fqdns.py  ips.py
plugin/env/: __init__.py  get_env.py
plugin/umich/: __init__.py  portal.py
prompts/: add-tests-for-change.prompt.md  adversarial-review.md  debugging-standards.md  directives.md  implementation-standards.md  new-feature-design.prompt-template.md  new-feature-standards.md  refresh-fixtures.prompt.md  update-claude-md.md
psh/: __init__.py  _legacy.py  charts.py  cli.py  configuration.py  db.py  gateway.py  gather.py  lifecycle.py  mail.py  modules.py  notice.py  plans.py  render.py  traffic.py
sample-news/: new-support-page.toml  overages-suspended.toml
tests/: README.md  conftest.py
tests/e2e/: test_abort_e2e.py  test_eml_headers.py  test_golden.py  (+8 more)
umich/: MCommunity.py
(+167 files in other folders)
