[project]
name = "pantheon-sitehealth-emails"
version = "0.2.0"
# 3.12+, not 3.11: the program uses PEP 701 backslash escapes inside f-strings at
# 5 sites (grep `\\,` in the notice builders), which are a SyntaxError at import on
# 3.11.  This also drives ruff's target-version -- see [tool.ruff] below.
requires-python = ">=3.12"
dependencies = [
    "rich",
    "SQLAlchemy",
    "matplotlib",
    "Jinja2",
    "dnspython",
    "html2text",
    'semver',
]

[project.optional-dependencies]
mysql = [
    "mysqlclient",
]
aws = [
    "boto3",
    "botocore",
]
cloudflare = [
    "cloudflare",
    # For the [Cloudflare.cachecheck] site cache checks (check/cloudflare/).  httpx was
    # already a transitive dep of the cloudflare SDK; it and beautifulsoup4 are direct
    # deps of ours now.
    "httpx",
    "beautifulsoup4",
]
test = [
    "pytest",
    "syrupy",
    "hypothesis",
    "pytest-cov",
    "pytest-playwright",
    # The check/cloudflare integration tests parse canned HTML with real bs4 and build
    # canned responses around the httpx-based seam:
    "httpx",
    "beautifulsoup4",
    # Campaign ratchet, type half (CAMPAIGN.md section 13): ./run-tests gates on pyright.
    "pyright",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Deps-only install, on purpose: the program is repo-rooted (CWD-relative check/,
# plugin/, templates, config symlink), so installing psh into site-packages would
# create a stale shadow copy -- a silent-failure hazard.  packages = [] stops
# setuptools auto-discovery from picking up psh/ now that it exists.
py-modules = []
packages = []

[tool.ruff]
# NO target-version.  Ruff infers it from `requires-python`, and that is load-bearing:
# pinning target-version = "py312" here MASKS the 3.11-vs-PEP-701 defect entirely --
# the 10 invalid-syntax errors simply vanish -- so a future session reverting
# requires-python to ">=3.11" would get SILENCE instead of a failure.  The instrument
# must stay red-capable.  See prompts/directives.md PD#14.

[tool.ruff.lint]
# NARROW BY DESIGN.  Every rule here mechanizes a standard that already exists in prose;
# nothing here is new policy.  This narrow set runs EVERYWHERE, including files the
# campaign ratchet grandfathers.  The broad best-practice set lives in ruff-broad.toml
# (campaign ratchet, CAMPAIGN.md section 13); both passes run in ./run-tests and the
# edit-time hook.  The two files merge at campaign increment I14.
select = [
    "E722",    # bare except        <- prompts/directives.md PD#2 "every error has a name"
    "BLE001",  # blind except       <- prompts/directives.md PD#2
    "S105",    # hardcoded password <- prompts/directives.md PD#6 "security is not optional"
    "S106",    # hardcoded password <- prompts/directives.md PD#6
]

[tool.ruff.lint.per-file-ignores]
# Test fixtures deliberately carry fake credentials (e.g. "hunter2" in a config
# substitution test).  All 5 current S105 hits are fixtures; none is a real secret.
# Verified 2026-07-16.
"tests/*" = ["S105", "S106"]

[tool.pyright]
# Campaign ratchet, type half (CAMPAIGN.md section 13).  Standard mode at I0 because
# psh/cli.py re-exports from the untyped legacy module; the strictness ratchets up as
# increments move typed code in (ledger tracks).  _legacy.py is grandfathered like in
# ruff-broad.toml.
include = ["psh"]
exclude = ["psh/_legacy.py"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tiers are selected by mark; see tests/README.md and ./run-tests.
markers = [
    "unit: pure/in-process function tests, no I/O",
    "integration: in-process, run_terminus monkeypatched, temp DB, check hooks",
    "e2e: full-script subprocess runs (shim terminus + real php)",
    "live: real Terminus, read-only, against the test sites (needs network + auth)",
    "render: headless-browser rendering checks (pytest-playwright)",
    "email: GMail send/receive round-trip (deferred until SMTP/SendGrid; skipped)",
    "slow: tests that may take a while (live Pantheon, browser downloads)",
]

[tool.coverage.run]
# Program code now lives in the psh package plus two top-level modules; measure all
# three (the old single-file include glob would match only the 7-line shim).
# In-process tiers only; see tests/README.md for the subprocess-coverage caveat.
include = ["*/psh/*", "*/script_context.py", "*/dns_classify.py"]

